how to check no. of tokens

--- a/Notes.mdx
+++ b/Notes.mdx
@@ -17,3 +17,7 @@
 #Just put `start` startts or startjs will not work
     - "startjs": "node --env-file=.env src/index.js",
     - "start": "node -r ts-node/register --env-file=.env src/index.ts",
+
+
+#to check no. of tokens in nodejs project
+    -`npm i tiktoken`
