--- a/Notes.mdx
+++ b/Notes.mdx
@@ -42,3 +42,14 @@
         parameter controls the modal tendecy to repeat  token  that have already been generated,higher 
     - n
         number of choises
+
+## 2 Simple Chat project
+    - Chat with the OpenAI
+    - add Chat history (context)
+    - set token limit
+
+### 2.1 Setup new chat-app project
+    - `npm init -y`
+    - `npm i -D typescript ts-node @types/node`
+    - `npx tsc --init`
+    - `npm i openai tiktoken` 
