more optimize way of calling openai

--- a/Notes.mdx
+++ b/Notes.mdx
@@ -53,3 +53,11 @@
     - `npm i -D typescript ts-node @types/node`
     - `npx tsc --init`
     - `npm i openai tiktoken` 
+
+### Build chat with openAI
+    - we will use console as the chat interface 
+        - use `process.stdin.addListener`
+
+### 2.3 add chat history (context)
+    
+
