Set the token limit

--- a/Notes.mdx
+++ b/Notes.mdx
@@ -59,5 +59,11 @@
         - use `process.stdin.addListener`
 
 ### 2.3 add chat history (context)
-    
+    - you can build this by simple pushing the user and asistance in the array
+
+### 2.4 Set the token limit
+    - why keepp context small?
+        - to control the cost 
+        - to contorl the length of the response
+        - to avoid error  due to large context of gpt-4.1-nano-2025-04-14 has limit of 1,047,576 context window
 
