train reservation project

--- a/Notes.mdx
+++ b/Notes.mdx
@@ -91,5 +91,20 @@
     - Call the function
     - call openAI with the function response
 
+### 4 Project(Train Reservation System Asistance)
+    - Recuirement:
+        User should be able to ask for train between two stations
+         eg.: "What are the train between Mumbai and Delhi?"
+        Agent should responed with the train details
+         eg.: "There are 2 trains :Rajdhani and Shatabdi."
+        User should be able to ask for making reservation.
+         eg.: "I want book a ticket for Rajdhani"
+        Aagent should respond with the reservation details
+         eg.: "Your ticket is booked for Rajdhani. Your PNR is 1234567890."
 
+    - Tech Feature to Imaplements :
+        - Function calling
+            - getTrainBetweenStations(source, destination)
+            - bookTicket(trainName,date)
+        - Context
 
