--- a/Notes.mdx
+++ b/Notes.mdx
@@ -149,3 +149,14 @@
 ## generate multiple Embadding and save it
 
 ## calculate similarity between embading
+
+## Project: Recomnedation System
+
+    - Product Requirment
+        - User should be able to ask for recomendation.
+            - ex: "I like freanch food"
+        - Agents should responds with recomendation.
+            - "You may like croissant,baguttes, and Brioche"
+    - for prod level project use dataset like : https://www.kaggle.com/datasets?search=food
+    
+    - Techfeature to Imaplements
